# underocean-new

./: CMakeLists.txt  main.cpp
include/client/: GameClient.h
include/client/common/: AudioManager.h  ChatBox.h  ClientFoodBall.h  ClientPhysics.h  DeathEffectSystem.h  FollowingSprite.h  INodeScene.h  IScene.h  InputManager.h  KeyBindingManager.h  LightingSystem.h  NetworkEntity.h  PlayerEntity.h  ResourceManager.h
include/client/scenes/: FloatingObj.h  LazyPanelScene.h  RootScene.h
include/client/scenes/CharacterSelectMenu/: CharacterSelectMenu.h
include/client/scenes/LevelSelectMenu/: LevelSelectMenu.h  StatusIndicator.h
include/client/scenes/NameScene/: NameScene.h  PlayerIdLabel.h
include/client/scenes/flashscreen/: FlashScreen.h  LoadingIndicator.h
include/client/scenes/helpscene/: HelpScene.h
include/client/scenes/levelscenes/: LevelScene1.h  LevelScene2.h  LevelScene3.h  LevelScene4.h  LevelScene5.h  LevelScene6.h  LevelSceneBase.h  PlayerStatus.h  SkillBar.h
include/client/scenes/startmenu/: StartMenu.h
include/client/ui/: ILayout.h  IRenderable.h  IWidget.h
include/client/ui/layouts/: GridLayout.h  LazyLayout.h
include/client/ui/widgets/: Button.h  ILabel.h  ImageButton.h  Panel.h  TextButton.h  WidgetBase.h
include/common/: Types.h
include/common/net(depricate)/: ClientPacketChannel.h  ENetClientChannel.h  ENetServerChannel.h  MemoryClientChannel.h  MemoryServerChannel.h  PacketChannel.h  PacketReader.h  PacketWriter.h  ServerPacketChannel.h  enet.h
include/common/network/: ClientNetworkDriver.h  ServerNetworkDriver.h
include/common/utils/: CRC32.h  DBitset.h  DirectFollower.h  Follower.h  Integrity.h  Physics.h  Physics_deprecate.h  Random.h  Uuid.h
include/server/: GameServer.h
include/server/core/: CollisionBox.h  GameData.h
include/server/core(deprecate)/: CollisionBox.h  CollisionBox_deprecate.h  GameData.h
include/server/core(deprecate)/states/: FreeMode.h
include/server/core/states/: FreeMode.h
include/server/game/: FishFactory.h  OldEntity.h
include/server/game(deprecate)/: FishFactory.h  OldEntity.h
include/server/game(deprecate)/creatures/: SmallFish.h
include/server/game/creatures/: SmallFish.h
include/server/new/: Coordinator.h  EventBus.h  ILevel.h  LevelBase.h
src/: AttackingSystem.cpp  AudioManager.cpp  BoidsSystem.cpp  Button.cpp  CharacterSelectMenu.cpp  ChatBox.cpp  ClientFoodBall.cpp  CollisionSystem.cpp  Coordinator.cpp  DerivedAttributeSystem.cpp  EntityFactory.cpp  FreeMode.cpp  GameData.cpp  GameServer.cpp  HelpScene.cpp  INodeScene.cpp  InputManager.cpp  Integrity.cpp  LazyLayout.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp  LevelSceneBase.cpp  LevelSelectMenu.cpp  NameScene.cpp  NetworkSyncSystem.cpp  PlayerStatus.cpp  RootScene.cpp  SkillBar.cpp  SkillSystem.cpp  SmallFish.cpp  StartMenu.cpp  TextButton.cpp  enet_wrapper.cpp
(+37 files in other folders)
